* CHANGELOG

** 0.11 (UNRELEASED)

** 0.10
- Parse function calls in joins, for example:
  #+BEGIN_SRC sql
    FROM
        x
        JOIN r ON
            XYZ(r.id) = ABC(x.r)
  #+END_SRC
- Parse SQL_CALC_FOUND_ROWS
  #+BEGIN_SRC sql
    SELECT SQL_CALC_FOUND_ROWS * FROM tbl_name WHERE id > 100 LIMIT 10;
  #+END_SRC

** 0.9
- Parse INSERTs. This kind of INSERTs should work now:
  #+BEGIN_SRC sql
    INSERT INTO
        spam
    SELECT
        *
    FROM
        eggs
  #+END_SRC

  #+BEGIN_SRC sql
    INSERT INTO
        table_name (col1, col2, 3)
    VALUES
        ("value!", value2, 3)
  #+END_SRC

  #+BEGIN_SRC sql
    INSERT INTO
        table_name
    VALUES
        ("value!", value2, 3),
        ("1"),
        ("2")
  #+END_SRC
- Parse functions with no arguments.
  #+BEGIN_SRC python
      sql = """ SELECT NOW() """
  #+END_SRC

** 0.8
- Parse =IS NOT NULL= comparisions.
  #+BEGIN_SRC python
      sql = """ WHERE x IS NOT NULL """
  #+END_SRC
- Parse =IS NULL= comparisions.
  #+BEGIN_SRC python
      sql = """ WHERE x IS NULL """
  #+END_SRC

** 0.7
- Allow aliases in selects.
  #+BEGIN_SRC python
      sql = """ select x as y """
  #+END_SRC

** 0.6
- Enabled single quotes as SQL string wrapper.
  So you can format double and single quoted SQL strings.
  #+BEGIN_SRC python
      sql = """ select x from y """
      sql = ''' select x from y '''
  #+END_SRC
- Fixed: Don't print =--debug= parameter value.
- Added =--dry-run= parameter.
  If =--dry-run= is set, no file will be altered but printed to STDOUT.
- Allow comparison of scalar with sub-select
  #+BEGIN_SRC python
      sql = """ where x = (select max(*) from k) """
  #+END_SRC

** 0.5
- All given non-Python files are handled as SQL files.
  The =--types= parameter can be used to exclude certain file types.
- Added command line parameter =--version= to echo the current version.
- Added command line parameter =--debug= to print available debug output.

** 0.4