@@ -7,10 +7,11 @@ Copyright (c) 2014-2015, Friedrich Paetzke (paetzke@fastmail.fm)
 All rights reserved.
 
 """
-import pytest
 from format_sql.parser import (Identifier, InvalidCondition, InvalidIdentifier,
                                InvalidLimit, Number, _parse_identifier, parse)
 from format_sql.tokenizer import Token
+
+import pytest
 
 
 def assert_statements(tokens1, statements2):
@@ -254,3 +255,7 @@ def test_parse_insert_3(insert_3):
 
 def test_parse_insert_4(insert_4):
     assert_statements(insert_4.tokens, insert_4.statements)
+
+
+def test_parse_between_1(between_1):
+    assert_statements(between_1.tokens, between_1.statements)
